--- a/index.html
+++ b/index.html
@@ -52,25 +52,36 @@
       <div
         class="action-content"
       >
-        <div>Image</div>
+        <img
+          src="assets/handyman_black_24dp.svg"
+          height="64px"
+        >
         <div>Réparation Carbone</div>
       </div>
       <div
         class="action-content"
       >
-        <div>Image</div>
+        <img
+          src="assets/icons8-bicycle-64.png"
+          height="64px"
+        >
         <div>Service E-Vélo et Vélo</div>
       </div>
       <div
         class="action-content"
       >
-        <div>Image</div>
+        <img
+          src="assets/design_services.svg"
+          height="64px"
+        >
         <div>Création de vélo sur mesure</div>
       </div>
-      <img
-        src="assets/palm-tree.svg"
-        class="action-palm-tree"
-      />
+      <!--
+        <img
+          src="assets/palm-tree.svg"
+          class="action-palm-tree"
+        />
+      -->
     </section>
     <section
       class="first-presentation"
