Update logo and svg

--- a/index.html
+++ b/index.html
@@ -38,17 +38,21 @@
       <div
         class="logo"
       >
-        <img src="assets/palm-logo.svg" width="200" height="200" />
-      </div>
-      <div
-        class="title"
-      >
-        PALM          
+        <img src="assets/palm-logo.svg" />
       </div>
     </section>
     <section
       class="action-section"
     >
+      <div
+        class="action-content"
+      >
+        <img
+          src="assets/bike.svg"
+          height="64px"
+        >
+        <div>Création de vélo sur mesure</div>
+      </div>
       <div
         class="action-content"
       >
@@ -61,27 +65,16 @@
       <div
         class="action-content"
       >
-        <img
-          src="assets/icons8-bicycle-64.png"
-          height="64px"
-        >
+      <img
+        src="assets/design_services.svg"
+        height="64px"
+      >
         <div>Service E-Vélo et Vélo</div>
       </div>
-      <div
-        class="action-content"
-      >
-        <img
-          src="assets/design_services.svg"
-          height="64px"
-        >
-        <div>Création de vélo sur mesure</div>
-      </div>
-      <!--
-        <img
-          src="assets/palm-tree.svg"
-          class="action-palm-tree"
-        />
-      -->
+      <img
+        src="assets/palm-tree.svg"
+        class="action-palm-tree"
+      />
     </section>
     <section
       class="first-presentation"
