--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="fr-CH">
 	<head>
 		<meta charset="utf-8">
-		<title>PALM Cycle</title>
-    <meta name="description" content="PALM Cycle - Réparation tout type vélo - Vélo Carbone">
+		<title>PALM Cycles</title>
+    <meta name="description" content="PALM Cycles - Réparation tout type vélo - Vélo Carbone">
     <meta name="author" content="Julien Studer">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="theme-color" content="#94D2BD">
-    <meta property="og:title" content="PALM Cycle">
+    <meta property="og:title" content="PALM Cycles">
     <meta property="og:description" content="Réparation tout type vélo - Vélo Carbone">
     <meta property="og:url" content="https://site.ch/">
     <meta name="twitter:card" content="summary_large_image">
@@ -23,19 +23,39 @@
     </script>
     
     <!--  Non-Essential, But Recommended -->
-    <meta property="og:site_name" content="PALM Cycle">
+    <meta property="og:site_name" content="PALM Cycles">
     <meta property="og:type" content="website">
-    <meta name="twitter:title" content="PALM Cycle">
+    <meta name="twitter:title" content="PALM Cycles">
     <meta name="twitter:url" content="https://site.ch/">
     <meta name="twitter:description" content="Réparation tout type vélo - Vélo Carbone">
-    <meta name="twitter:site" content="@palmcycle" />
-    <meta name="twitter:creator" content="@palmcycle" />
+    <meta name="twitter:site" content="@palmcycles" />
+    <meta name="twitter:creator" content="@palmcycles" />
 	</head>
 	<body>
+    <nav
+      id="navbar"
+      class="navbar"
+    >
+      <ul>
+        <li
+          class="navbar-logo"
+        >
+          <img
+            src="assets/palm-logo.svg"
+          />
+        </li>
+        <li>
+          <a href="#insta">
+            <img src="assets/insta.svg" />
+          </a>
+        </li>
+      </ul>
+    </nav>
     <section
       class="main-section"
     >
       <div
+        id="logo"
         class="logo"
       >
         <img src="assets/palm-logo.svg" />
