--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>PALM Cycles</title>
+    <link rel="icon" href="icons/favicon.svg" type="image/svg+xml">
+    <link rel="mask-icon" href="icons/mask-icon.svg" color="#000000" type="image/svg+xml">
     <meta name="description" content="PALM Cycles - Réparation tout type vélo - Vélo Carbone">
     <meta name="author" content="Julien Studer">
     <link rel="stylesheet" href="style.css">
